Fix BanquePower.java